--- a/Blogpost.html
+++ b/Blogpost.html
@@ -27,7 +27,10 @@
                             no lo eres... por ahora.
                         </p>
                         <p>Suscribete y dale like</p>
-                </div>                
+                </div>   
+                <div id="footer">
+                    Hecho con amor en Platzi
+                </div>          
             </div>          
         </body>
 </html>
