--- a/Blogpost.html
+++ b/Blogpost.html
@@ -24,7 +24,7 @@
                             información y tus ideas.
                             Mucho más que ir a
                             conferencias o salir en Youtube. Excepto
-                            si eres un rockstar. Pero estadisticamente 
+                            si eres un rockstar. Pero estadísticamente 
                             no lo eres... por ahora.
                         </p>
                         <p>Suscribete y dale like</p>
