Edité el último párrafo del body

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -27,7 +27,7 @@
                             si eres un rockstar. Pero estad&iacute;sticamente 
                             no lo eres... por ahora.
                         </p>
-                        <p>Suscribete y dale like</p>
+                        <p>Suscribete y dale like. Estoy desde la MacbookAir (Modesto)</p>
                 </div>   
                 <div id="footer">
                     Hecho con amor en Platzi
