--- a/Blogpost.html
+++ b/Blogpost.html
@@ -9,7 +9,7 @@
                     <img id="logo" src="Imágenes/dragon.png" />
                     Hyperblog
                     <span id="tagline">
-                        Tu blog de cabecera
+                        Tu blog de confianza
                     </span>
                 </div>
                 <div id="post">
